@@ -10,6 +10,9 @@ Release date: 2015-05-24
 Core and Builtins
 -----------------
 
+- Issue #23955: Add pyvenv.cfg option to suppress registry/environment
+  lookup for generating sys.path on Windows.
+
 - Issue #24257: Fixed system error in the comparison of faked
   types.SimpleNamespace.
 
